# kosa

./: .gitignore  Cargo.toml  buf.gen.yaml
kosa/: Cargo.toml
kosa-macros/: Cargo.toml
kosa-macros/src/: command.rs  lib.rs  service.rs
kosa-proto/: Cargo.toml
kosa-proto/src/pb/: common.v2.rs  login.v2.rs  message.v2.rs  mod.rs  notify.v2.rs  service.highway.v2.rs  service.v2.rs  system.v2.rs
kosa/examples/: example_login.rs
kosa/src/: lib.rs
kosa/src/common/: appinfo.rs  bot.rs  cache.rs  highway.rs  mod.rs  packet.rs  session.rs  sign.rs
kosa/src/common/entity/: contact.rs  mod.rs
kosa/src/common/network/: client.rs  codec.rs  mod.rs
kosa/src/event/: context.rs  login.rs  message.rs  mod.rs  push_message.rs
kosa/src/message/: image.rs  mod.rs  text.rs
kosa/src/service/: context.rs  mod.rs  oidb.rs
kosa/src/service/login/: info_sync.rs  mod.rs  trans_emp.rs  wtlogin.rs
kosa/src/service/message/: media_upload.rs  mod.rs  send_message.rs
kosa/src/service/packet/: mod.rs  nt_v2_richmedia.rs  sso_packet.rs  tlv.rs  wt_login.rs
kosa/src/service/system/: alive.rs  fetch_friend.rs  highway_session.rs  mod.rs  sso_heartbeat.rs
kosa/src/utils/: broker.rs  compress.rs  image.rs  io.rs  marker.rs  mod.rs
kosa/src/utils/binary/: mod.rs  reader.rs  writer.rs
kosa/src/utils/crypto/: aes.rs  ecdh.rs  mod.rs  pow.rs  tea.rs
