[workspace]
resolver = "3"
members = ["kosa", "kosa-macros", "kosa-proto"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = "0.4.42"
futures = "0.3.31"
hex = "0.4.3"
prost = "0.14.1"
rand = "0.9.2"
serde = "1.0.228"
thiserror = "2.0.17"
tokio-util = "0.7.17"
tracing = "0.1.44"
