[package]
name = "kosa"
version = "0.1.0"
edition.workspace = true

[features]
opentelemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk"]

[dependencies]
actix = "0.13.5"
aes = "0.8.4"
aes-gcm = { version = "0.10.3", features = ["std"] }
ahash = { version = "0.8.12", features = ["serde"] }
anyhow = { workspace = true }
arc-swap = { version = "1.8.0", features = ["serde"] }
async-trait = { workspace = true }
base64 = { workspace = true }
bitflags = { version = "2.10.0", features = ["serde"] }
block-padding = "0.4.2"
byteorder = "1.5.0"
bytes = { workspace = true, features = ["serde"] }
cbc = { version = "0.1.2", features = ["std", "alloc", "block-padding"] }
chrono.workspace = true
dashmap = "6.1.0"
derive_more = { version = "2.1.1", features = ["display"] }
digest = "0.11.0-rc.11"
enum_dispatch = "0.3.13"
flate2 = "1.1.5"
futures = { workspace = true }
hex = { workspace = true }
imagesize = "0.14.0"
inventory = "0.3.21"
kosa-macros = { path = "../kosa-macros" }
kosa-proto = { path = "../kosa-proto" }
md-5 = "0.11.0-rc.5"
num-bigint = "0.4.6"
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"], optional = true }
p256 = { version = "0.14.0-rc.7", features = ["ecdh"] }
prost = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.13.1", features = ["json"] }
rmp-serde = "1.3.1"
scopeguard = "1.2.0"
serde = { workspace = true, features = ["derive"] }
sha1 = "0.11.0-rc.5"
sha2 = "0.11.0-rc.5"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = { workspace = true }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = "0.31.0"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.22", features = ["local-time"] }
